<resources>
    <string name="app_name">CardsX</string>
    <string name="nav_wallet">Wallet</string>
    <string name="nav_tracker">Tracker</string>
    <string name="nav_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_cards">Your Cards</string>
    <string name="add_new_card">Add New Card</string>
    <string name="random_color">Random Color</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="number_space">XXXX XXXX XXXX XXXX</string>
    <string name="card_holder_name">CARD HOLDER NAME</string>
    <string name="card_number">Card number</string>
    <string name="Expiry">Expiry</string>
    <string name="cvv">CVV</string>
    <string name="mm_yy">MM/YY</string>
    <string name="bank_name">Bank name</string>
    <string name="nav_go_back">Back</string>
    <string name="nav_help">Help</string>
    <string name="nav_save">Save Card</string>
    <string name="app_sub">One Place to store all your cards securely!</string>
    <string name="onboard">Onboarding CardsX</string>
    <string name="welcome">Welcome</string>
    <string name="login_sub">Please login to continue.</string>
    <string name="continue_with">Continue with...</string>
    <string name="tos">"By continuing you accept CardsX "</string>
    <string name="toc">Terms and Conditions.</string>
    <string name="ok">Ok</string>
    <string name="facebook_app_id"></string>
    <string name="fb_login_protocol_scheme"></string>
    <string name="loading_txt">Processing your request...</string>
    <string name="setup">Setting Up CardsX</string>
    <string name="setup_txt">Let\'s Setup Security Credentials for you.\nThis key will be used to access all your cards data.</string>
    <string name="warning">⚠ Warning</string>
    <string name="inst_pass">The provide key will be used to encrypt all your data . \nIf you forget it , The entire data will be wiped.</string>
    <string name="usernameHi">Hi, %name%</string>
    <string name="security_key">Security Key</string>
    <string name="encrypt">Encrypt</string>
    <string name="s_key_msg">Enter Your Security Key</string>
    <string name="total_spent">Total Spent</string>
    <string name="card_details">Card Details</string>
    <string name="nav_delete">Remove</string>
    <string name="copy">Copy</string>
    <string name="card_expiry">Card Expiry</string>
    <string name="card_cvv">Card CVV</string>
    <string name="card_type">Detected Card</string>
    <string name="card_added">Added On</string>
    <string name="add_track_data">ADD EXPENSES DATA</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add Data</string>
    <string name="add_track_info">Add your Expenses here</string>
    <string name="hint_time">Select Date</string>
    <string name="title">Title or Company</string>
    <string name="des">Description</string>
    <string name="cost">Expense Value</string>
    <string name="rs_cost">Rs %cost%</string>
    <string name="no_added_exp">NO ADDED EXPENSES YET.</string>
    <string name="no_added_cards">No added cards yet.</string>
    <string name="loading">Loading...</string>
    <string name="today">Today</string>
    <string name="signout">SignOut</string>
    <string name="removeData">Remove all Data</string>
    <string name="share_using">Share Using</string>
    <string name="share_app">Share CardsX</string>
    <string name="rate">Star us on Playstore</string>
    <string name="about">About CardsX</string>
    <string name="developed_by">Developed with ❤ ArgonLabs.</string>
    <string name="add_optn">ADD CARD</string>
    <string name="google_ads_app_id"></string>
    <string name="video_ad_unit_id"></string>
    <string name="help_dev_with_an_ad">Help Dev with an ad</string>
</resources>
