<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingBottom="11dp">

    <View
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@drawable/main_grad_colors"/>

    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:id="@+id/pswrdTv"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_track_data"/>


    <TextView
        android:layout_marginBottom="@dimen/padding_5dp"
        android:layout_gravity="center"
        android:id="@+id/msg"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="@dimen/padding_10dp"
        android:layout_marginEnd="@dimen/padding_10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_track_info"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/padding_10dp"
        android:id="@+id/tlMainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_domain"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_dashboard"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/des">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_monetization_on"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/cost">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_report_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_date_range_black_24dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_data_usage_black_24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/hint_time">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_report_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_marginStart="@dimen/padding_10dp"
        android:layout_marginEnd="@dimen/padding_10dp"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:layout_marginStart="@dimen/padding_15dp"
            android:layout_marginEnd="@dimen/padding_15dp"
            android:layout_weight="1"
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:layout_marginStart="@dimen/padding_15dp"
            android:layout_marginEnd="@dimen/padding_15dp"
            android:layout_weight="1"
            android:id="@+id/sure_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />



    </LinearLayout>

</LinearLayout>