<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainCard"
    app:cardCornerRadius="7dp"
    android:layout_width="match_parent"
    android:layout_marginStart="@dimen/padding_15dp"
    android:layout_marginEnd="@dimen/padding_15dp"
    android:layout_marginBottom="@dimen/padding_15dp"
    app:cardElevation="3.5dp"
    app:cardBackgroundColor="#03A9F4"
    android:clickable="true"
    android:focusable="true"
    android:layout_height="170dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/padding_15dp"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bankNameTv"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:textSize="21sp"
                android:textColor="@color/white"
                android:alpha="0.7"
                android:textAllCaps="true"
                android:text="@string/bank_name"/>

            <ImageView
                android:id="@+id/cardLogo"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp" />

        </RelativeLayout>


        <TextView
            android:id="@+id/cardNumber"
            android:layout_marginTop="17dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/number_space"/>

        <LinearLayout
            android:weightSum="2"
            android:gravity="center"
            android:layout_marginTop="@dimen/padding_30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cardHolderName"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:alpha="0.7"
                android:textColor="@color/white"
                android:text="@string/cardholder_name"/>


            <TextView
                android:id="@+id/cardExpiryTv"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:gravity="end"
                android:alpha="0.7"
                android:text="@string/mm_yy"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>