<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.WalletFragment">

    <View
        android:id="@+id/status_bar_view"
        android:background="@drawable/main_grad_colors"
        android:layout_width="match_parent"
        android:layout_height="28dp"/>

    <RelativeLayout
        android:layout_marginBottom="@dimen/padding_10dp"
        android:id="@+id/bgTop"
        android:background="@drawable/btm_rounded_edge"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_marginTop="2dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/padding_20dp"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:text="@string/your_cards"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:textSize="22sp"/>

        <TextView
            android:focusable="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:layout_marginTop="40dp"
            android:id="@+id/addCardTv"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/padding_20dp"
            android:textSize="15sp"
            android:text="@string/add_optn"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:layout_height="28dp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/loadingTv"
        android:layout_marginTop="@dimen/padding_15dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"/>

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardsRecycler"/>

    <LinearLayout
        android:visibility="gone"
        android:layout_marginTop="@dimen/padding_15dp"
        android:id="@+id/emptyList"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lv2"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_fileName="empty.json"/>

        <TextView
            android:textAllCaps="true"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_added_cards"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addNewCardBtn"
        android:layout_marginStart="@dimen/padding_20dp"
        android:layout_marginEnd="@dimen/padding_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:padding="@dimen/padding_15dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:icon="@drawable/ic_add_circle_outline_black_24dp"
        app:iconGravity="textStart"
        android:text="@string/add_new_card"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="80dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>