<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <com.facebook.login.widget.LoginButton
        android:id="@+id/sign_in_facebook"
        android:textSize="17sp"
        android:padding="15dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/status_bar_view"
        android:background="@drawable/main_grad_colors"
        android:layout_width="match_parent"
        android:layout_height="28dp"/>


    <RelativeLayout
        android:layout_marginBottom="@dimen/padding_10dp"
        android:id="@+id/bgTop"
        android:background="@drawable/btm_rounded_edge"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/closeDialog"
            android:id="@+id/title"
            android:layout_marginTop="2dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/padding_20dp"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:text="@string/setup"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:textSize="22sp"/>

        <ImageView
            android:focusable="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="4dp"
            android:id="@+id/closeDialog"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/padding_20dp"
            android:layout_width="32dp"
            android:layout_centerVertical="true"
            android:layout_height="32dp"
            android:src="@drawable/ic_cancel" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_marginTop="-70dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/usernameTv"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:text="@string/usernameHi"/>

        <TextView
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setup_txt"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_marginTop="-50dp"
            app:lottie_enableMergePathsForKitKatAndAbove="true"
            android:id="@+id/lottie"
            android:layout_gravity="center"
            android:layout_width="330dp"
            android:layout_height="330dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_fileName="setup.json"/>

        <!--    <ImageView-->
        <!--        android:layout_marginTop="@dimen/padding_10dp"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="230dp"-->
        <!--        android:src="@drawable/ic_login_amico"/>-->


       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/keyTl"
           android:layout_marginTop="-80dp"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           android:hint="@string/security_key"
           app:endIconMode="password_toggle"
           android:layout_marginStart="@dimen/padding_20dp"
           android:layout_marginEnd="@dimen/padding_20dp"
           android:layout_width="match_parent"
           app:counterEnabled="true"
           app:counterMaxLength="6"
           android:layout_height="wrap_content">


           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/keyEt"
               android:inputType="numberPassword"
               android:maxLength="6"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">



           </com.google.android.material.textfield.TextInputEditText>

       </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.button.MaterialButton
            android:visibility="invisible"
            android:id="@+id/encryptBtn"
            android:layout_marginEnd="@dimen/padding_20dp"
            app:cornerRadius="4dp"
            android:textAlignment="center"
            android:padding="@dimen/padding_10dp"
            android:textColor="@color/white"
            android:text="@string/encrypt"
            android:gravity="center"
            android:layout_gravity="end"
            app:iconGravity="end"
            app:icon="@drawable/ic_arrow_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="@dimen/padding_15dp"
            android:layout_marginEnd="@dimen/padding_15dp"
            android:padding="@dimen/padding_10dp"
            android:layout_marginTop="@dimen/padding_10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inst_pass"/>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>