<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.TrackerFragment">



    <RelativeLayout
        android:id="@+id/bgTop"
        android:background="@drawable/btm_rounded_edge"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <View
            android:layout_marginTop="@dimen/padding_20dp"
            android:scaleType="fitCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_tracker2"/>

        <LinearLayout
            android:layout_marginStart="@dimen/padding_20dp"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/white"
                android:alpha="0.8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_spent"/>

            <TextView
                android:id="@+id/spentTotalTv"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs_cost"/>

        </LinearLayout>




    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addToTrackFab"
        app:backgroundTint="@color/colorAccent"
        app:tint="@android:color/white"
        android:src="@drawable/ic_add_white"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/padding_30dp"
        android:layout_marginTop="-30dp"
        android:layout_below="@id/bgTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <LinearLayout
        android:visibility="gone"
        android:id="@+id/emptyList"
        android:gravity="center"
        android:layout_below="@id/bgTop"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lv2"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_fileName="empty.json"/>

        <TextView
            android:layout_marginTop="4dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginBottom="120dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_added_exp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_below="@id/bgTop"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.recyclerview.widget.RecyclerView
        android:scrollbars="none"
        android:layout_marginTop="@dimen/padding_5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/expenseRecycler"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="80dp"/>

    </LinearLayout>


</RelativeLayout>